[gd_scene load_steps=5 format=3 uid="uid://bdhwi5f8rf0td"]

[ext_resource type="Script" uid="uid://btj7433bbvw42" path="res://Scripts/card.gd" id="1_brehn"]
[ext_resource type="Texture2D" uid="uid://bkuqpel75myiu" path="res://Assets/Evil_Eye.png" id="2_eumee"]
[ext_resource type="Texture2D" uid="uid://v285b4gx0t4i" path="res://Assets/damage_token.png" id="3_e6po8"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_rjlel"]
size = Vector2(148.5, 209.5)

[node name="Card" type="Area2D"]
script = ExtResource("1_brehn")
metadata/_edit_lock_ = true

[node name="HTTPRequest" type="HTTPRequest" parent="."]

[node name="Sprite2D" type="Sprite2D" parent="."]
scale = Vector2(0.1, 0.1)
texture = ExtResource("2_eumee")
metadata/_edit_lock_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 1)
shape = SubResource("RectangleShape2D_rjlel")
metadata/_edit_lock_ = true

[node name="DefenseMinus" type="Button" parent="."]
offset_left = 55.0
offset_top = 106.0
offset_right = 94.0
offset_bottom = 137.0
scale = Vector2(0.5, 0.5)
text = "-"

[node name="DefensePlus" type="Button" parent="."]
offset_left = 35.0
offset_top = 106.0
offset_right = 74.0
offset_bottom = 137.0
scale = Vector2(0.5, 0.5)
text = "+"

[node name="DamageToken" type="Sprite2D" parent="."]
position = Vector2(51, 4)
scale = Vector2(0.02, 0.02)
texture = ExtResource("3_e6po8")

[node name="DamageLabel" type="Label" parent="."]
offset_left = 46.0
offset_top = -9.0
offset_right = 86.0
offset_bottom = 14.0
text = "0"

[connection signal="input_event" from="." to="." method="_on_input_event"]
[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
[connection signal="request_completed" from="HTTPRequest" to="." method="_on_http_request_request_completed"]
[connection signal="pressed" from="DefenseMinus" to="." method="_on_defense_minus_pressed"]
[connection signal="pressed" from="DefensePlus" to="." method="_on_defense_plus_pressed"]
